--- a/themes/optimus-theme/style.css
+++ b/themes/optimus-theme/style.css
@@ -12,6 +12,11 @@
 /*This theme inherits wp-rootstrap theme*/
 @import url("../unite/style.css");
 
+.btn-primary, .label-primary {
+    background-color: #00a0d2;
+    border-color: #00a0d2;
+}
+
 .navbar.navbar-default {
     background-color: #5DADE2;
     font-weight: 200;
@@ -47,4 +52,34 @@
     display: block;
     max-width: 100%;
     height: 500px;
+}
+
+.search-wrapper {
+    background-color: #5DADE2;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-bottom: 15px;
+    margin-left: 30px;
+    margin-right: 30px;
+}
+
+.search-header {
+    color: #fff;
+}
+
+.search-form {
+    line-height: 1.375;
+}
+
+.search-form .form-group {
+    margin-top: 10px;
+    margin-bottom: 15px;
+}
+
+.search-form select, .search-form select.form-control {
+    padding-right: 0;
+    padding-left: 0;
+    box-shadow: inset 0 -1px 0 #dddddd;
+    font-size: 16px;
+    line-height: 1.5;
 }
