--- a/themes/optimus-theme/style.css
+++ b/themes/optimus-theme/style.css
@@ -83,3 +83,29 @@
     font-size: 16px;
     line-height: 1.5;
 }
+
+.entry-title {
+    font-size: 40px;
+    font-weight: 200;
+    color: #54397E;
+}
+
+hr.section-divider:after {
+    z-index: 10000;
+    content: "\f015";
+    font-family: FontAwesome;
+    color: #54397E;
+    position: absolute;
+    top: -23px;
+    left: 50%;
+    right: 50%;
+    width: 40px;
+    height: 30px;
+    margin-left: -20px;
+    font-size: 30px;
+}
+
+.bedrooms {
+    color: #54397E;
+    font-size: 30px;
+}
