--- a/themes/optimus-theme/style.css
+++ b/themes/optimus-theme/style.css
@@ -12,6 +12,14 @@
 /*This theme inherits wp-rootstrap theme*/
 @import url("../unite/style.css");
 
+.ui-widget-shadow {
+    -moz-box-shadow:    1px 2px 4px 5px #d5d5d5;
+    -webkit-box-shadow: 1px 2px 4px 5px #d5d5d5;
+    box-shadow:         1px 2px 4px 5px #d5d5d5;
+    width: 100%;
+    min-height: 1500px;
+}
+
 .btn-primary, .label-primary {
     background-color: #00a0d2;
     border-color: #00a0d2;
