--- a/themes/optimus-theme/style.css
+++ b/themes/optimus-theme/style.css
@@ -126,26 +126,26 @@ hr.section-divider:after {
 }
 
 #cptbc-item-1 {
-  background-image: url("images/house/Richards_House.jpg");
+  background-image: url("http://thanhnguyend.sgedu.site/optimus_wp/wp-content/uploads/2016/10/Richards_House.jpg");
   max-width: 100%;
   height:550px;
 
 }
 
 #cptbc-item-2 {
-  background-image: url("images/appartment/appartment.jpg");
+  background-image: url(http://thanhnguyend.sgedu.site/optimus_wp/wp-content/uploads/2016/10/appartment.jpg);
   max-width: 100%;
   height:550px;
 
 }
 #cptbc-item-3 {
-  background-image: url("images/town house/townhouse.jpg");
+  background-image: url("http://thanhnguyend.sgedu.site/optimus_wp/wp-content/uploads/2016/10/townhouse.jpg");
   max-width: 100%;
   height:550px;
 
 }
 #cptbc-item-4 {
-  background-image: url("images/villa/villas.jpg");
+  background-image: url("http://thanhnguyend.sgedu.site/optimus_wp/wp-content/uploads/2016/10/villas.jpg");
   max-width: 100%;
   height:550px;
 
