--- a/themes/optimus-theme/style.css
+++ b/themes/optimus-theme/style.css
@@ -111,12 +111,12 @@ hr.section-divider:after {
 }
 
 .icon-text {
-  color: #54397E;
+  color: #999;
   font-size: 19px;
 }
 
 .price-text {
-  color: #54397E;
+  color: #29a9df;
   font-size: 30px;
 }
 
@@ -165,7 +165,7 @@ hr.section-divider:after {
   text-align: center;
   vertical-align: middle;
   padding: 12px 24px;
-  border: 4px solid #798ed1;
+  border: 2px solid #798ed1;
   border-radius: 8px;
   background: #83a6de;
   background: -webkit-gradient(linear, left top, left bottom, from(#83a6de), to(#1244e8));
@@ -181,7 +181,7 @@ hr.section-divider:after {
 }
 .button:hover,
 .button:focus {
-  border: 4px solid #9db9ff;
+  border: 2px solid #9db9ff;
   background: #9dc7ff;
   background: -webkit-gradient(linear, left top, left bottom, from(#9dc7ff), to(#1652ff));
   background: -moz-linear-gradient(top, #9dc7ff, #1652ff);
@@ -216,4 +216,10 @@ hr.section-divider:after {
 
 #wp-calendar .table-striped>tbody>tr:nth-of-type(odd) {
   background-color: transparent;
+}
+
+.entry-header .entry-title {
+  font: 3em/1.5em "BenchNine",Arial,Helvetica,sans-serif;
+  color: #29a9df;
+
 }
